ideavim: configure easymotion for ideavim

--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -6,8 +6,7 @@ set surround
 set multiple-cursors
 set commentary
 set argtextobj
-" set easymotion
-set sneak
+set easymotion
 set textobj-entire
 set ReplaceWithRegister
 set multiple-cursors
@@ -110,8 +109,9 @@ nnoremap <leader>ss :action SelectInProjectView<CR>
 
 " useful
 nnoremap <C-A> gg<S-v>G
-" nmap f <Plug>(easymotion-f)
-" nmap F <Plug>(easymotion-F)
-" nmap t <Plug>(easymotion-t)
-" nmap T <Plug>(easymotion-T)
-" nmap <Leader>sh <Plug>(easymotion-s)
+nmap f <Plug>(easymotion-fl)
+nmap F <Plug>(easymotion-Fl)
+nmap t <Plug>(easymotion-tl)
+nmap T <Plug>(easymotion-Tl)
+nmap s <Plug>(easymotion-bd-w)
+
