kitty: map alt keys in kitty

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1633,4 +1633,30 @@ map cmd+0 change_font_size all 0
 
 map ctrl+shift+j send_text normal \x1b[74;5u
 map ctrl+shift+k send_text normal \x1b[75;5u
+map alt+a send_text normal \x1ba
+map alt+b send_text normal \x1bb
+map alt+c send_text normal \x1bc
+map alt+d send_text normal \x1bd
+map alt+e send_text normal \x1be
+map alt+f send_text normal \x1bf
+map alt+g send_text normal \x1bg
+map alt+h send_text normal \x1bh
+map alt+i send_text normal \x1bi
+map alt+j send_text normal \x1bj
+map alt+k send_text normal \x1bk
+map alt+l send_text normal \x1bl
+map alt+m send_text normal \x1bm
+map alt+n send_text normal \x1bn
+map alt+o send_text normal \x1bo
+map alt+p send_text normal \x1bp
+map alt+q send_text normal \x1bq
+map alt+r send_text normal \x1br
+map alt+s send_text normal \x1bs
+map alt+t send_text normal \x1bt
+map alt+u send_text normal \x1bu
+map alt+v send_text normal \x1bv
+map alt+w send_text normal \x1bw
+map alt+x send_text normal \x1bx
+map alt+y send_text normal \x1by
+map alt+z send_text normal \x1bz
 
