kitty: update kitty binding

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1594,8 +1594,8 @@ clear_all_shortcuts yes
 map cmd+t>t new_tab
 map cmd+t>c set_tab_title
 map cmd+t>x close_tab
-map cmd+n next_tab
-map cmd+p previous_tab
+map cmd+right next_tab
+map cmd+left previous_tab
 map cmd+1 goto_tab 1
 map cmd+2 goto_tab 2
 map cmd+3 goto_tab 3
@@ -1611,7 +1611,7 @@ map cmd+w>w new_window
 map cmd+w>x close_window
 map cmd+w>l next_layout
 map cmd+w>r start_resizing_window
-map cmd+w>o new_os_window
+map cmd+n new_os_window
 map cmd+o next_window
 map ctrl+minus resize_window narrower
 map ctrl+plus resize_window wider
