--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -56,7 +56,7 @@ nnoremap <leader>sv :action SplitVertically <CR>
 nnoremap <leader>sc :action UnsplitAll <CR>
 nnoremap <leader>v :action NextSplitter <CR>
 
-nnoremap <leader><space> :action RecentFiles<CR>
+nnoremap <leader>bb :action RecentFiles<CR>
 " search
 nmap <leader>fw :action FindInPath<CR>
 vmap <leader>fw :action FindInPath<CR>
