kitty: map quit button

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1620,6 +1620,7 @@ map ctrl+plus resize_window wider
 map cmd+k>r load_config_file
 map cmd+c copy_to_clipboard
 map cmd+v paste_from_clipboard
+map cmd+q quit
 
 map cmd+f launch --type=overlay --stdin-source=@screen_scrollback /usr/local/bin/fzf --no-sort --no-mouse --exact -i --tac
 
