--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1561,30 +1561,30 @@ clear_all_shortcuts yes
 #: }}}
 #
 #: tab ------------------------------------------------------------------------
-map cmd+t>t new_tab
-map cmd+t>c set_tab_title
-map cmd+t>x close_tab
-map cmd+right next_tab
-map cmd+left previous_tab
-map cmd+1 goto_tab 1
-map cmd+2 goto_tab 2
-map cmd+3 goto_tab 3
-map cmd+4 goto_tab 4
-map cmd+5 goto_tab 5
-map cmd+6 goto_tab 6
-map cmd+7 goto_tab 7
-map cmd+8 goto_tab 8
-map cmd+9 goto_tab 9
+# map cmd+t>t new_tab
+# map cmd+t>c set_tab_title
+# map cmd+t>x close_tab
+# map cmd+right next_tab
+# map cmd+left previous_tab
+# map cmd+1 goto_tab 1
+# map cmd+2 goto_tab 2
+# map cmd+3 goto_tab 3
+# map cmd+4 goto_tab 4
+# map cmd+5 goto_tab 5
+# map cmd+6 goto_tab 6
+# map cmd+7 goto_tab 7
+# map cmd+8 goto_tab 8
+# map cmd+9 goto_tab 9
 
 #: window ---------------------------------------------------------------------
-map cmd+w>w new_window
-map cmd+w>x close_window
-map cmd+w>l next_layout
-map cmd+w>r start_resizing_window
-map cmd+n new_os_window
-map cmd+o next_window
-map ctrl+minus resize_window narrower
-map ctrl+plus resize_window wider
+# map cmd+k>w new_window
+# map cmd+k>x close_window
+# map cmd+w>l next_layout
+# map cmd+k>r start_resizing_window
+map cmd+k>n new_os_window
+map cmd+k>x close_window
+# map ctrl+minus resize_window narrower
+# map ctrl+plus resize_window wider
 
 #: others ----------------------------------------------------------------------
 map cmd+k>r load_config_file
@@ -1592,12 +1592,12 @@ map cmd+c copy_to_clipboard
 map cmd+v paste_from_clipboard
 map cmd+q quit
 
-map cmd+f launch --type=overlay --stdin-source=@screen_scrollback fzf --no-sort --no-mouse --exact -i --tac
+# map cmd+f launch --type=overlay --stdin-source=@screen_scrollback fzf --no-sort --no-mouse --exact -i --tac
 
 scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 # scrollback_pager /usr/local/bin/nvim  -c "set nonumber nolist showtabline=0 foldcolumn=0" -c "autocmd TermOpen * normal G" -c "silent write /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
 
-map cmd+k>s show_scrollback
+# map cmd+k>s show_scrollback
 map cmd+plus change_font_size all +2.0
 map cmd+minus change_font_size all -2.0
 map cmd+0 change_font_size all 0
