--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -30,7 +30,7 @@ wrap-indicator = "↩ "
 
 [editor.statusline]
 left = [ "mode", "spinner", "file-name", "read-only-indicator", "file-modification-indicator", "version-control", "diagnostics" ]
-right = [ "selections", "register", "position", "position-percentage", "total-line-numbers", "file-encoding" ]
+right = [ "primary-selection-length", "register", "position", "position-percentage", "total-line-numbers", "file-encoding" ]
 separator = "│"
 mode.normal = "N"
 mode.insert = "I"
@@ -45,7 +45,9 @@ S-down = ["extend_to_line_bounds", "delete_selection", "paste_after"]
 S-up = ["extend_to_line_bounds", "delete_selection", "move_line_up", "paste_before"]
 
 [keys.normal.space.g]
-g = ":sh zellij run -fc --height 100% --width 100% --x 1 --y 1 -- lazygit"
+#g = ":sh zellij run -fc --height 100% --width 100% --x 1 --y 1 -- lazygit"
+g = [":new", ":insert-output lazygit", ":buffer-close!", ":redraw"]
+n = [":new", ":sh zellij run -f -x 10% -y 10% --width 80% --height 80% -- bash ~/.config/helix/yazi-picker.sh", ":buffer-close!", ":redraw"]
 
 [keys.select]
 S-down = ["delete_selection", "paste_after"]
