--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -45,8 +45,8 @@ S-down = ["extend_to_line_bounds", "delete_selection", "paste_after"]
 S-up = ["extend_to_line_bounds", "delete_selection", "move_line_up", "paste_before"]
 
 [keys.normal.space.g]
-#g = ":sh zellij run -fc --height 100% --width 100% --x 1 --y 1 -- lazygit"
-g = [":new", ":insert-output lazygit", ":buffer-close!", ":redraw"]
+g = ":sh zellij run -fc --height 100% --width 100% --x 1 --y 1 -- gitui"
+#g = [":new", ":insert-output lazygit", ":buffer-close!", ":redraw"]
 n = [":new", ":sh zellij run -f -x 10% -y 10% --width 80% --height 80% -- bash ~/.config/helix/yazi-picker.sh", ":buffer-close!", ":redraw"]
 
 [keys.select]
