--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -6,6 +6,8 @@ mouse = true
 auto-save = true
 cursorline = false
 bufferline = "always"
+color-modes	= true
+rulers = [120]
 
 [editor.cursor-shape]
 insert = "bar"
@@ -43,10 +45,11 @@ C-e = ["scroll_down", "move_line_down"]
 C-y = ["scroll_up", "move_line_up"]
 S-down = ["extend_to_line_bounds", "delete_selection", "paste_after"]
 S-up = ["extend_to_line_bounds", "delete_selection", "move_line_up", "paste_before"]
+"@" = ["move_prev_word_start", "move_next_word_end", "search_selection", "global_search"]
 
-[keys.normal.space.g]
-g = ":sh zellij run -fc --height 100% --width 100% --x 1 --y 1 -- gitui"
+[keys.normal.space.space]
 #g = [":new", ":insert-output lazygit", ":buffer-close!", ":redraw"]
+g = ":sh zellij run -fc --height 100% --width 100% --x 1 --y 1 -- gitui"
 n = [":new", ":sh zellij run -f -x 10% -y 10% --width 80% --height 80% -- bash ~/.config/helix/yazi-picker.sh", ":buffer-close!", ":redraw"]
 
 [keys.select]
