--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -56,10 +56,11 @@ X = "remove_primary_selection"
 x = "keep_selections"
 "A-x" = "remove_selections"
 
-[keys.normal.space.space]
+[keys.normal.space.g]
 #g = [":new", ":insert-output lazygit", ":buffer-close!", ":redraw"]
-g = ":sh zellij run -fc --height 100% --width 100% --x 1 --y 1 -- gitui"
-n = [":new", ":sh zellij run -f -x 10% -y 10% --width 80% --height 80% -- bash ~/.config/helix/yazi-picker.sh", ":buffer-close!", ":redraw"]
+g = ":sh zellij run -fc --height 100% --width 100% --x 0 --y 0 -- gitui"
+c = "changed_file_picker"
+n = [":new", ":sh zellij run -f -x 0 -y 0 --width 100% --height 100% -- bash ~/.config/helix/yazi-picker.sh", ":buffer-close!", ":redraw"]
 
 [keys.select]
 S-down = ["delete_selection", "paste_after"]
