helix: add highlighting for csv files

--- a/helix/.config/helix/languages.toml
+++ b/helix/.config/helix/languages.toml
@@ -42,3 +42,13 @@ formatter = { command = "stylua", args = ["-"] }
 
 [language-server.lua-language-server.config.Lua]
 diagnostics = { globals = [ "vim", "hs" ] }
+
+[[language]]
+name = "csv"
+file-types = ["csv"]
+scope = "source.csv"
+
+[[grammar]]
+name = "csv"
+source.git = "https://github.com/weartist/rainbow-csv-tree-sitter"
+source.rev = "896e6d09b23a1b0d87e45bf97ca34a249f41495c"
