helix: map repeat key to comma

--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -46,12 +46,13 @@ H = ["ensure_selections_forward", "extend_to_line_start"]
 L = ["ensure_selections_forward", "extend_to_line_end"]
 # Search for word under cursor
 "*" = ["move_char_right", "move_prev_word_start", "move_next_word_end", "search_selection", "search_next"]
-"#" = ["move_char_right", "move_prev_word_start", "move_next_word_end", "search_selection", "search_prev"]
+"," = "repeat_last_motion"
+"#" = "keep_primary_selection"
 
 [keys.normal.space.g]
 c = "changed_file_picker"
-g = [":new", ":sh zellij run -fc -x 0 -y 0 --height 100% --width 100% -- gitui", ":buffer-close!", ":redraw"]
-l = [":new", ":sh zellij run -fc -x 0 -y 0 --height 100% --width 100% -- lazygit", ":buffer-close!", ":redraw"]
+g = [":new", ":sh zellij run -fc -x 0 -y 0 --height 100% --width 100% -- lazygit", ":buffer-close!", ":redraw"]
+G = [":new", ":sh zellij run -fc -x 0 -y 0 --height 100% --width 100% -- gitui", ":buffer-close!", ":redraw"]
 n = [":new", ":sh zellij run -fc -x 0 -y 0 --height 100% --width 100% -- bash ~/.config/helix/yazi-picker.sh", ":buffer-close!", ":redraw"]
 
 [keys.select]
@@ -59,3 +60,4 @@ C-j = ["delete_selection", "paste_after"]
 C-k = ["delete_selection", "move_line_up", "paste_before"]
 "A-[" = "search_next"
 "A-]" = "search_prev"
+
