--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -47,7 +47,15 @@ L = ["ensure_selections_forward", "extend_to_line_end"]
 # Search for word under cursor
 "*" = ["move_char_right", "move_prev_word_start", "move_next_word_end", "search_selection", "search_next"]
 "," = "repeat_last_motion"
-"#" = "keep_primary_selection"
+J = ["select_line_below"]
+K = ["select_line_above"]
+
+"A-j" = "join_selections"
+"A-J" = "join_selections_space"
+
+X = "remove_primary_selection"
+x = "keep_selections"
+"A-x" = "remove_selections"
 
 [keys.normal.space.g]
 c = "changed_file_picker"
@@ -60,4 +68,15 @@ C-j = ["delete_selection", "paste_after"]
 C-k = ["delete_selection", "move_line_up", "paste_before"]
 "A-[" = "search_next"
 "A-]" = "search_prev"
+J = ["select_line_below"]
+K = ["select_line_above"]
+"H" = ["goto_line_start"]
+"L" = ["goto_line_end"]
+
+"A-j" = "join_selections"
+"A-J" = "join_selections_space"
+
+X = "remove_primary_selection"
+x = "keep_selections"
+"A-x" = "remove_selections"
 
