--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -762,55 +762,6 @@ hide_window_decorations titlebar-only
 
 # vim:ft=kitty
 
-## name: Tokyo Night
-## license: MIT
-## author: Folke Lemaitre
-## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty/tokyonight_night.conf
-
-
-background #1a1b26
-foreground #c0caf5
-selection_background #283457
-selection_foreground #c0caf5
-url_color #73daca
-cursor #c0caf5
-cursor_text_color #1a1b26
-
-# Tabs
-active_tab_background #7aa2f7
-active_tab_foreground #16161e
-inactive_tab_background #292e42
-inactive_tab_foreground #545c7e
-#tab_bar_background #15161e
-
-# Windows
-active_border_color #7aa2f7
-inactive_border_color #292e42
-
-# normal
-color0 #15161e
-color1 #f7768e
-color2 #9ece6a
-color3 #e0af68
-color4 #7aa2f7
-color5 #bb9af7
-color6 #7dcfff
-color7 #a9b1d6
-
-# bright
-color8 #414868
-color9 #f7768e
-color10 #9ece6a
-color11 #e0af68
-color12 #7aa2f7
-color13 #bb9af7
-color14 #7dcfff
-color15 #c0caf5
-
-# extended colors
-color16 #ff9e64
-color17 #db4b4b
-
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
 #: supported by the OS (for instance, when using a compositor under
@@ -1631,3 +1582,9 @@ map alt+x send_text normal \x1bx
 map alt+y send_text normal \x1by
 map alt+z send_text normal \x1bz
 
+
+
+# BEGIN_KITTY_THEME
+# Tokyo Night
+include current-theme.conf
+# END_KITTY_THEME
