switch theme to catppucchin mocha

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -796,6 +796,9 @@ hide_window_decorations titlebar-only
 
 dynamic_background_opacity yes
 
+
+text_composition_strategy platform
+
 #: Allow changing of the background_opacity dynamically, using either
 #: keyboard shortcuts (increase_background_opacity and
 #: decrease_background_opacity) or the remote control facility.
@@ -1081,7 +1084,8 @@ macos_option_as_alt yes
 #: resizable on macOS. Changing this setting by reloading the config
 #: will only affect newly created windows.
 
-macos_thicken_font 0.75
+# macos_thicken_font 0.25
+
 
 #: Draw an extra border around the font with the given width, to
 #: increase legibility at small font sizes. For example, a value of
@@ -1585,6 +1589,6 @@ map alt+z send_text normal \x1bz
 
 
 # BEGIN_KITTY_THEME
-# Tokyo Night
+# Catppuccin-Mocha
 include current-theme.conf
 # END_KITTY_THEME
