helix: enable cursor line

--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -4,7 +4,7 @@ theme = "catppuccin_mocha"
 completion-timeout = 5
 mouse = true
 auto-save = true
-cursorline = false
+cursorline = true
 bufferline = "always"
 color-modes	= true
 # rulers = [120]
