--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1589,6 +1589,6 @@ map alt+z send_text normal \x1bz
 
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Mocha
+# Tokyo Night Moon
 include current-theme.conf
 # END_KITTY_THEME
