helix: configure marksman and prettier for markdown

--- a/helix/.config/helix/languages.toml
+++ b/helix/.config/helix/languages.toml
@@ -18,8 +18,8 @@ auto-format = true
 
 [[language]]
 name = "markdown"
-# https://github.com/executablebooks/mdformat
-formatter = { command = "mdformat", args = ["-"] }
+auto-format = true
+formatter = { command = "prettier", args = ["--parser", "markdown"] }
 
 # [[language]]
 # name = "rust"
